--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <br>
             <button>submit</button>
             <hr>
+            <p>i love git</p>
             
         </form>
 
